# RomanoRender

./: .gitattributes  README.md
GenepiRender/: GenepiRender.sln
GenepiRender/GenepiRender/: GenepiRender.vcxproj  GenepiRender.vcxproj.filters  Load_Scene.cpp  Main.cpp  brdf.h  bsdf.h  bvh.h  camera.h  imgui.ini  include_all.h  light.h  main.h  mat3.h  material.h  math.h  matrix.h  objloader.h  ray.h  render.h  scene.h  settings.h  stats.h  tiles.h  triangle.h  utils.h  vec3.h
GenepiRender/GenepiRender/imgui/: imnodes.h
GenepiRender/GenepiRender/src/: Main.cpp  imgui.ini
GenepiRender/GenepiRender/src/app/: console.h  log.h
GenepiRender/GenepiRender/src/render/: render.h
GenepiRender/GenepiRender/src/scene/: camera.h  scene.h  settings.h  stats.h
GenepiRender/GenepiRender/src/shading/: brdf.h  light.h  material.h
GenepiRender/GenepiRender/src/utils/: math.h  ray.h  utils.h  vec2.h
RomanoRender/: CMakeLists.txt  RomanoRender.sln  RomanoRender.vcxproj  RomanoRender.vcxproj.filters  build_vcpkg.bat  build_windows.bat  imgui.ini
RomanoRender/RomanoRender/: CMakeLists.txt  RomanoRender.vcxproj  RomanoRender.vcxproj.filters  imgui.ini
RomanoRender/RomanoRender/ReleaseTracy/: RomanoRender.exe.recipe  RomanoRender.vcxproj.FileListAbsolute.txt
RomanoRender/RomanoRender/ReleaseTracy/RomanoRender.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  RomanoRender.lastbuildstate  RomanoRender.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
RomanoRender/RomanoRender/src/: Main.cpp  include_all.h
RomanoRender/RomanoRender/src/app/: nodeeditor.h  nodes.h
RomanoRender/RomanoRender/src/maths/: maths.h
RomanoRender/RomanoRender/src/render/: render.h  sampler.h
RomanoRender/RomanoRender/src/scene/: camera.h  scene.h  settings.h  tinyobjl.h
RomanoRender/RomanoRender/src/shading/: brdf.h  light.h  material.h
RomanoRender/RomanoRender/src/utils/: matrix.h  ray.h  tiles.h  utils.h  vec3.h
RomanoRender/Samples/: samples_1.txt  samples_10.txt  samples_11.txt  samples_12.txt  samples_13.txt  samples_14.txt  samples_15.txt  samples_16.txt  samples_2.txt  samples_3.txt  samples_4.txt  samples_5.txt  samples_6.txt  samples_7.txt  samples_8.txt  samples_9.txt
RomanoRender/imgui/: CMakeLists.txt  imgui_impl_opengl3.cpp  imnodes.cpp
RomanoRender/src/: CMakeLists.txt  Main.cpp  include_all.h
RomanoRender/src/app/: CMakeLists.txt  console.cpp  console.h  editor.cpp  editor.h  filedialog.cpp  filedialog.h  log.cpp  log.h  menubar.cpp  menubar.h  nodeeditor.h  nodes.h  outliner.cpp  outliner.h  rendersettings.cpp  rendersettings.h  renderview.cpp  renderview.h  shelf.cpp  shelf.h
RomanoRender/src/render/: CMakeLists.txt  integrators.cpp  integrators.h  render.cpp  render.h
RomanoRender/src/render/integrators/: CMakeLists.txt  ao.cpp  ao.h  cartoon.cpp  cartoon.h  pathtracer.cpp  pathtracer.h  scene_view.cpp  scene_view.h
RomanoRender/src/scene/: CMakeLists.txt  camera.cpp  camera.h  objloader.h  scene.cpp  scene.h  settings.h  stats.cpp  stats.h
RomanoRender/src/shading/: CMakeLists.txt  bsdf.cpp  bsdf.h  light.cpp  light.h  material.h
RomanoRender/src/utils/: CMakeLists.txt  embree_utils.cpp  embree_utils.h  file_utils.cpp  file_utils.h  maths_utils.cpp  maths_utils.h  matrix.h  ocio_utils.cpp  ocio_utils.h  ray.h  sampling_utils.cpp  sampling_utils.h  str_utils.cpp  str_utils.h  utils.h  vec2.h  vec3.h  windows_utils.cpp  windows_utils.h
RomanoRender/windows-build/: CMakeCache.txt
